--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,3 +3,22 @@
 @tailwind components;
 
 @tailwind utilities;
+
+html,
+body,
+body > div {
+    height: 100%;
+}
+
+body > div {
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex: 1 0 auto;
+}
+
+footer {
+    flex-shrink: 0;
+}
